--- a/myproject/templates/team_info.html
+++ b/myproject/templates/team_info.html
@@ -37,10 +37,12 @@
 
                     <div class="info-block mt-4">
                         <h4 class="mb-0">林杰</h4>
-                        <p>後端設計</p>
+                        <p>後端程式撰寫</p>
 
                         <ul class="list-inline mt-4 doctor-social-links">
-                            <li class="list-inline-item"><a href="https://www.facebook.com/profile.php?id=100015870154781"><i class="icofont-facebook"></i></a></li>
+                            <li class="list-inline-item"><a
+                                    href="https://www.facebook.com/profile.php?id=100015870154781"><i
+                                        class="icofont-facebook"></i></a></li>
                             <li class="list-inline-item"><a href="#"><i class="icofont-twitter"></i></a></li>
                             <li class="list-inline-item"><a href="#"><i class="icofont-skype"></i></a></li>
                             <li class="list-inline-item"><a href="#"><i class="icofont-linkedin"></i></a></li>
@@ -55,7 +57,7 @@
                     <h2 class="text-md">JAY LIN</h2>
                     <div class="divider my-4"></div>
                     <p>
-                        我會的東東：python 、 c 、 HTML 、 CSS 、Javascript 、 一點點 freebsd <br>
+                        我會的東東：Python 、 C 、 HTML 、 CSS 、JavaScript 、 一點點 freebsd <br>
                         興趣：排球、游泳、打 code 、彈琴 <br>
                         有時候很懶，所以報告都趕死線 <br>
                         IG : jaylin0418 <br>
@@ -66,7 +68,8 @@
                         quod obcaecati laborum temporibus, deleniti vero perferendis molestias, ducimus facilis, sunt
                         minima. Tempora, amet quasi asperiores voluptas?</p> #}
 
-                    <a href="https://www.facebook.com/profile.php?id=100015870154781" class="btn btn-main-2 btn-round-full mt-3">Contact me<i
+                    <a href="https://www.facebook.com/profile.php?id=100015870154781"
+                        class="btn btn-main-2 btn-round-full mt-3">Contact me<i
                             class="icofont-simple-right ml-2  "></i></a>
                 </div>
             </div>
@@ -83,10 +86,11 @@
 
                     <div class="info-block mt-4">
                         <h4 class="mb-0">陳妍沂</h4>
-                        <p>前端設計</p>
+                        <p>前端程式撰寫與美術設計</p>
 
                         <ul class="list-inline mt-4 doctor-social-links">
-                            <li class="list-inline-item"><a href="https://www.facebook.com/yenyichen.sssh"><i class="icofont-facebook"></i></a></li>
+                            <li class="list-inline-item"><a href="https://www.facebook.com/yenyichen.sssh"><i
+                                        class="icofont-facebook"></i></a></li>
                             <li class="list-inline-item"><a href="#"><i class="icofont-twitter"></i></a></li>
                             <li class="list-inline-item"><a href="#"><i class="icofont-skype"></i></a></li>
                             <li class="list-inline-item"><a href="#"><i class="icofont-linkedin"></i></a></li>
@@ -104,17 +108,17 @@
                         大家好~<br>
                         我是一名高二準備升高三的悲慘學測生(?<br>
                         主要的興趣是下圍棋和寫程式<br>
+                        特別是喜歡用程式實作東東解決一些生活上討厭的小問題<br>
                         同時也喜歡打羽球和競速滑輪<br>
-                        目前正在學習如何增加自己的美術涵養(?<br>
-                        而在這次的黑客松主要負責前端和美術設計
+                        目前正在學習如何增加自己的美術涵養(?
                     </p>
                     {# <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo recusandae veritatis minus
                         optio
                         quod obcaecati laborum temporibus, deleniti vero perferendis molestias, ducimus facilis, sunt
                         minima. Tempora, amet quasi asperiores voluptas?</p> #}
 
-                    <a href="https://www.facebook.com/yenyichen.sssh" class="btn btn-main-2 btn-round-full mt-3">Contact me<i
-                            class="icofont-simple-right ml-2  "></i></a>
+                    <a href="https://www.facebook.com/yenyichen.sssh" class="btn btn-main-2 btn-round-full mt-3">Contact
+                        me<i class="icofont-simple-right ml-2  "></i></a>
                 </div>
             </div>
         </div>
@@ -133,7 +137,8 @@
                         <p>文案設計</p>
 
                         <ul class="list-inline mt-4 doctor-social-links">
-                            <li class="list-inline-item"><a href="https://www.facebook.com/tzuyufanchiang/"><i class="icofont-facebook"></i></a></li>
+                            <li class="list-inline-item"><a href="https://www.facebook.com/tzuyufanchiang/"><i
+                                        class="icofont-facebook"></i></a></li>
                             <li class="list-inline-item"><a href="#"><i class="icofont-twitter"></i></a></li>
                             <li class="list-inline-item"><a href="#"><i class="icofont-skype"></i></a></li>
                             <li class="list-inline-item"><a href="#"><i class="icofont-linkedin"></i></a></li>
@@ -149,7 +154,7 @@
                     <div class="divider my-4"></div>
                     <p>二類組的理工生 <br>
                         對資訊有興趣但能力還有待加強 <br>
-                        HalloWord 寫了 11 次才 AC  <br>
+                        HalloWord 寫了 11 次才 AC <br>
                         有一點社交障礙 <br>
                         找不到我的時候就是在睡覺
                     </p>
@@ -158,7 +163,8 @@
                         quod obcaecati laborum temporibus, deleniti vero perferendis molestias, ducimus facilis, sunt
                         minima. Tempora, amet quasi asperiores voluptas?</p> #}
 
-                    <a href="https://www.facebook.com/tzuyufanchiang/" class="btn btn-main-2 btn-round-full mt-3">Contact me<i
+                    <a href="https://www.facebook.com/tzuyufanchiang/"
+                        class="btn btn-main-2 btn-round-full mt-3">Contact me<i
                             class="icofont-simple-right ml-2  "></i></a>
                 </div>
             </div>
@@ -178,7 +184,8 @@
                         <p>文案設計</p>
 
                         <ul class="list-inline mt-4 doctor-social-links">
-                            <li class="list-inline-item"><a href="https://www.facebook.com/BobHsiao0826"><i class="icofont-facebook"></i></a></li>
+                            <li class="list-inline-item"><a href="https://www.facebook.com/BobHsiao0826"><i
+                                        class="icofont-facebook"></i></a></li>
                             <li class="list-inline-item"><a href="#"><i class="icofont-twitter"></i></a></li>
                             <li class="list-inline-item"><a href="#"><i class="icofont-skype"></i></a></li>
                             <li class="list-inline-item"><a href="#"><i class="icofont-linkedin"></i></a></li>
@@ -193,7 +200,7 @@
                     <h2 class="text-md">WEI-ZE XIAO</h2>
                     <div class="divider my-4"></div>
                     <p>讀工科的文科生<br>
-                        不熟還蠻安靜，熟了就會發現是幹話系畢業 <br> 
+                        不熟還蠻安靜，熟了就會發現是幹話系畢業 <br>
                         講的笑話冷到你需要穿外套 <br>
                         為了處理社團的事情翹了4節重補修，處理茶會又翹了7節，準備要再翹4節
                     </p>
@@ -202,8 +209,8 @@
                         quod obcaecati laborum temporibus, deleniti vero perferendis molestias, ducimus facilis, sunt
                         minima. Tempora, amet quasi asperiores voluptas?</p> #}
 
-                    <a href="https://www.facebook.com/BobHsiao0826" class="btn btn-main-2 btn-round-full mt-3">Contact me<i
-                            class="icofont-simple-right ml-2  "></i></a>
+                    <a href="https://www.facebook.com/BobHsiao0826" class="btn btn-main-2 btn-round-full mt-3">Contact
+                        me<i class="icofont-simple-right ml-2  "></i></a>
                 </div>
             </div>
         </div>
